--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,7 +3,90 @@ layout: base
 ---
 
 <header>
-    {% include {{ header.type}} %}
+    <!-- nav  -->
+    <nav class="navbar navbar-expand-sm">
+        <div class="container container-row">
+            <!-- nav toggle button -->
+        <button class="navbar-toggler">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <!-- logo -->
+        <a class="logo" href="/">
+            <!-- svg logo -->
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 486.21 129.16">
+                <path d="M168.73,294.84h-4.39a9,9,0,0,1-.17-1.13c0-.41,0-.81,0-1.2a10.87,10.87,0,0,1,.22-2.25h9.78v19.5a8.33,8.33,0,0,1-.64,3.45,6.2,6.2,0,0,1-1.77,2.33,7.21,7.21,0,0,1-2.66,1.31,13.14,13.14,0,0,1-3.35.41,15,15,0,0,1-1.57-.11,14.18,14.18,0,0,1-1.79-.34c0-.17,0-.34-.05-.51a5.06,5.06,0,0,1,0-.56,9.77,9.77,0,0,1,.63-3.4c.27.05.56.11.88.19a4.71,4.71,0,0,0,1,.11,12.61,12.61,0,0,0,1.33-.08,2.74,2.74,0,0,0,2.23-1.53,4.36,4.36,0,0,0,.39-2Z" transform="translate(-44.87 -233.44)" style="fill:#5CDB95"/>
+                <path d="M186.5,290.26h15.07a12.08,12.08,0,0,1,.22,2.25,12.53,12.53,0,0,1-.22,2.33h-9.68v5.76h7.68a12.23,12.23,0,0,1,.22,2.29,12.1,12.1,0,0,1-.22,2.33h-7.68v7h9.94a12.11,12.11,0,0,1,.22,2.26,12.42,12.42,0,0,1-.22,2.32H186.5Z" transform="translate(-44.87 -233.44)" style="fill:#5CDB95"/>
+                <path d="M218.33,304.51a16.84,16.84,0,0,1-2.25-1.05,6.77,6.77,0,0,1-1.7-1.37,5.53,5.53,0,0,1-1.09-1.9,9,9,0,0,1,.26-6,6.56,6.56,0,0,1,1.83-2.42,8.25,8.25,0,0,1,2.84-1.48,13,13,0,0,1,3.73-.5,17.19,17.19,0,0,1,3.53.34,25.78,25.78,0,0,1,3.45,1,13,13,0,0,1-1.18,4.21l-1.12-.45a10.87,10.87,0,0,0-1.22-.37c-.43-.09-.92-.17-1.46-.24a17,17,0,0,0-1.85-.09,7.88,7.88,0,0,0-1.27.11,3.69,3.69,0,0,0-1.17.41,2.45,2.45,0,0,0-.85.87,3,3,0,0,0-.33,1.49,2.68,2.68,0,0,0,.26,1.24,2.62,2.62,0,0,0,.7.85,4.7,4.7,0,0,0,1,.59l1.11.46,2.21.85a25.71,25.71,0,0,1,2.55,1.15,6.82,6.82,0,0,1,1.94,1.46,6.15,6.15,0,0,1,1.24,2.1,9.28,9.28,0,0,1,.44,3.05,8.5,8.5,0,0,1-.68,3.43,7.42,7.42,0,0,1-2,2.66,9.39,9.39,0,0,1-3.19,1.74,13.94,13.94,0,0,1-4.38.63c-.81,0-1.54,0-2.18-.08a16.88,16.88,0,0,1-1.83-.24,16.41,16.41,0,0,1-1.71-.42c-.57-.17-1.16-.38-1.78-.63a16.4,16.4,0,0,1,.41-2.24c.2-.77.43-1.55.7-2.34a19.59,19.59,0,0,0,2.92.94,13,13,0,0,0,2.92.31,6.59,6.59,0,0,0,3.65-.86,2.93,2.93,0,0,0,1.33-2.64,3.12,3.12,0,0,0-.31-1.48,3.3,3.3,0,0,0-.81-1,4.92,4.92,0,0,0-1.13-.68c-.42-.19-.85-.36-1.29-.54Z" transform="translate(-44.87 -233.44)" style="fill:#5CDB95"/>
+                <path d="M246,304.51a16.84,16.84,0,0,1-2.25-1.05,6.77,6.77,0,0,1-1.7-1.37,5.53,5.53,0,0,1-1.09-1.9,9,9,0,0,1,.26-6,6.56,6.56,0,0,1,1.83-2.42,8.16,8.16,0,0,1,2.84-1.48,13,13,0,0,1,3.73-.5,17.19,17.19,0,0,1,3.53.34,25.78,25.78,0,0,1,3.45,1,13,13,0,0,1-1.18,4.21l-1.12-.45a10.87,10.87,0,0,0-1.22-.37c-.43-.09-.92-.17-1.46-.24a17,17,0,0,0-1.85-.09,7.88,7.88,0,0,0-1.27.11,3.69,3.69,0,0,0-1.17.41,2.45,2.45,0,0,0-.85.87,3,3,0,0,0-.33,1.49,2.68,2.68,0,0,0,.26,1.24,2.62,2.62,0,0,0,.7.85,4.7,4.7,0,0,0,1,.59l1.11.46,2.21.85a25.71,25.71,0,0,1,2.55,1.15,6.82,6.82,0,0,1,1.94,1.46,6.15,6.15,0,0,1,1.24,2.1,9.28,9.28,0,0,1,.44,3.05,8.5,8.5,0,0,1-.68,3.43,7.42,7.42,0,0,1-2,2.66,9.39,9.39,0,0,1-3.19,1.74,13.94,13.94,0,0,1-4.38.63c-.81,0-1.54,0-2.18-.08a16.88,16.88,0,0,1-1.83-.24,16.41,16.41,0,0,1-1.71-.42c-.57-.17-1.16-.38-1.78-.63a16.4,16.4,0,0,1,.41-2.24c.2-.77.43-1.55.7-2.34a19.22,19.22,0,0,0,2.92.94,13,13,0,0,0,2.92.31,6.59,6.59,0,0,0,3.65-.86,2.93,2.93,0,0,0,1.33-2.64,3.12,3.12,0,0,0-.31-1.48,3.3,3.3,0,0,0-.81-1,4.92,4.92,0,0,0-1.13-.68c-.42-.19-.85-.36-1.29-.54Z" transform="translate(-44.87 -233.44)" style="fill:#5CDB95"/>
+                <path d="M268.9,290.26H284a11.3,11.3,0,0,1,.23,2.25,11.73,11.73,0,0,1-.23,2.33h-9.67v5.76H282a12.23,12.23,0,0,1,.22,2.29,12.1,12.1,0,0,1-.22,2.33h-7.68v7h9.93a11.32,11.32,0,0,1,.22,2.26,11.63,11.63,0,0,1-.22,2.32H268.9Z" transform="translate(-44.87 -233.44)" style="fill:#5CDB95"/>
+                <path d="M313.51,312.93a9.92,9.92,0,0,1,1,3.07,15,15,0,0,1-3.17,1,19.37,19.37,0,0,1-3.51.3,13.6,13.6,0,0,1-5.19-.95,10.45,10.45,0,0,1-3.9-2.69,11.83,11.83,0,0,1-2.43-4.27,17.46,17.46,0,0,1-.85-5.65,18.07,18.07,0,0,1,.85-5.74,12.42,12.42,0,0,1,2.43-4.38,10.81,10.81,0,0,1,3.88-2.79,13,13,0,0,1,5.14-1,19,19,0,0,1,3.62.3,21.32,21.32,0,0,1,2.69.7,6.83,6.83,0,0,1-.31,1.57c-.16.48-.35,1-.58,1.53l-1.07-.33c-.34-.1-.71-.18-1.1-.26a11.93,11.93,0,0,0-1.32-.16c-.48,0-1-.06-1.64-.06a7.64,7.64,0,0,0-6.26,2.73q-2.24,2.75-2.23,7.87a14.61,14.61,0,0,0,.62,4.54,8.59,8.59,0,0,0,1.78,3.18,7.08,7.08,0,0,0,2.75,1.88,9.78,9.78,0,0,0,3.6.63,13.5,13.5,0,0,0,2.81-.26A12,12,0,0,0,313.51,312.93Z" transform="translate(-44.87 -233.44)" style="fill:#5CDB95"/>
+                <path d="M326.84,290.22l1.48-.15,1.31-.13,1.35-.09c.47,0,1,0,1.55,0a19.41,19.41,0,0,1,3.73.37,9.49,9.49,0,0,1,3.29,1.3,7,7,0,0,1,2.34,2.49,7.8,7.8,0,0,1,.91,4,6.91,6.91,0,0,1-.48,2.62,8.36,8.36,0,0,1-2.9,3.71,13.39,13.39,0,0,1-1.83,1.13l-.44.22,7.72,11.19a19.31,19.31,0,0,1-2.26.11,16.59,16.59,0,0,1-2-.11l-8.5-12.3v-.14l.3-.08a16.14,16.14,0,0,0,2.1-.7,8.61,8.61,0,0,0,2.05-1.16,6.21,6.21,0,0,0,1.57-1.74,4.57,4.57,0,0,0,.63-2.46,4.82,4.82,0,0,0-1.57-4A6.44,6.44,0,0,0,333,293c-.42,0-.8,0-1.16,0s-.76.06-1.2.11v23.67l-.9.08-.95,0c-.29,0-.61,0-1,0a7.12,7.12,0,0,1-1-.09Z" transform="translate(-44.87 -233.44)" style="fill:#5CDB95"/>
+                <path d="M356.2,290.26h14.59a10.15,10.15,0,0,1,.11,1.62c0,.27,0,.56,0,.85a6,6,0,0,1-.1.81H360v7.61h8.64a6.18,6.18,0,0,1,.11.8,7.81,7.81,0,0,1,0,.83,8.45,8.45,0,0,1,0,.85,6.34,6.34,0,0,1-.11.81H360v9.09h11.12a11.46,11.46,0,0,1,.11,1.62c0,.27,0,.55,0,.85a4.77,4.77,0,0,1-.09.81H356.2Z" transform="translate(-44.87 -233.44)" style="fill:#5CDB95"/>
+                <path d="M396.46,310.68H386.38l-1.81,6.13c-.32.05-.64.09-1,.11s-.64,0-1,0-.69,0-1,0a7.39,7.39,0,0,1-.9-.11l8.64-26.55c.32-.05.67-.09,1-.11s.76,0,1.15,0,.7,0,1.07,0,.73.06,1.07.11l8.61,26.55a9,9,0,0,1-1,.11c-.37,0-.73,0-1.07,0s-.65,0-1,0a8.67,8.67,0,0,1-.94-.11Zm-9.08-3.29h8.08l-4.06-13.55Z" transform="translate(-44.87 -233.44)" style="fill:#5CDB95"/>
+                <path d="M418.14,293.54h-6.9a7.81,7.81,0,0,1-.12-.81c0-.29,0-.58,0-.85s0-.55,0-.83.07-.55.12-.79h17.58c0,.24.08.5.11.77s0,.54,0,.82,0,.56,0,.86-.07.59-.11.83h-6.91v23.27a13.34,13.34,0,0,1-1.85.11,14.4,14.4,0,0,1-1.92-.11Z" transform="translate(-44.87 -233.44)" style="fill:#5CDB95"/>
+                <path d="M440.38,290.26a8.58,8.58,0,0,1,.92-.11c.32,0,.64,0,1,0s.64,0,1,0a8.58,8.58,0,0,1,.92.11v26.55a8.85,8.85,0,0,1-.9.11c-.31,0-.64,0-1,0s-.65,0-1,0a7.39,7.39,0,0,1-.9-.11Z" transform="translate(-44.87 -233.44)" style="fill:#5CDB95"/>
+                <path d="M455.59,290.26a7.66,7.66,0,0,1,1-.11c.38,0,.75,0,1.09,0s.67,0,1,0a10.5,10.5,0,0,1,1.06.11L466.49,313l6.68-22.71a17,17,0,0,1,2-.11c.32,0,.66,0,1,0a7.12,7.12,0,0,1,1,.09l-8.64,26.55a10.33,10.33,0,0,1-1.08.11c-.39,0-.76,0-1.1,0s-.71,0-1.09,0-.75-.06-1.09-.11Z" transform="translate(-44.87 -233.44)" style="fill:#5CDB95"/>
+                <path d="M488.65,290.26h14.59a11.46,11.46,0,0,1,.11,1.62c0,.27,0,.56,0,.85a4.77,4.77,0,0,1-.09.81H492.42v7.61h8.64c.05.25.08.51.11.8s0,.56,0,.83,0,.55,0,.85-.06.56-.11.81h-8.64v9.09h11.11a10.15,10.15,0,0,1,.11,1.62c0,.27,0,.55,0,.85a4.77,4.77,0,0,1-.09.81H488.65Z" transform="translate(-44.87 -233.44)" style="fill:#5CDB95"/>
+                <path d="M515.17,312.79c.81.29,1.66.55,2.54.77a13.72,13.72,0,0,0,3.25.33,7,7,0,0,0,4.53-1.23,4.11,4.11,0,0,0,1.49-3.35,4.55,4.55,0,0,0-.31-1.77,3.35,3.35,0,0,0-.94-1.27,6.7,6.7,0,0,0-1.57-1c-.63-.3-1.36-.62-2.2-1l-2.1-.85a14.32,14.32,0,0,1-2-1,6,6,0,0,1-1.53-1.31,5.84,5.84,0,0,1-1-1.79A7,7,0,0,1,515,297a6.44,6.44,0,0,1,2.29-5.26,9.79,9.79,0,0,1,6.43-1.91,18.1,18.1,0,0,1,3.36.3,17.81,17.81,0,0,1,2.81.74,11.78,11.78,0,0,1-.82,3.06,19.4,19.4,0,0,0-2.31-.66,13.32,13.32,0,0,0-3-.3,5.87,5.87,0,0,0-3.58.95,3.28,3.28,0,0,0-1.26,2.82,3,3,0,0,0,.32,1.39,3.72,3.72,0,0,0,.83,1.07,6.35,6.35,0,0,0,1.22.83,13.11,13.11,0,0,0,1.47.66l2.07.81a22.28,22.28,0,0,1,2.62,1.24,8,8,0,0,1,2,1.52,5.84,5.84,0,0,1,1.24,2.05,8.23,8.23,0,0,1,.42,2.77,7.42,7.42,0,0,1-2.62,6c-1.75,1.46-4.2,2.2-7.35,2.2-.76,0-1.45,0-2.07-.08a16.56,16.56,0,0,1-1.71-.22,15,15,0,0,1-1.54-.37l-1.51-.48a8.55,8.55,0,0,1,.33-1.66C514.78,313.88,515,313.33,515.17,312.79Z" transform="translate(-44.87 -233.44)" style="fill:#5CDB95"/>
+                <polygon points="57.75 129.16 14.37 129.16 62.81 101.19 62.81 54.89 30 73.83 30 48.78 84.5 17.32 84.5 113.72 57.75 129.16" style="fill:#5CDB95"/>
+                <polygon points="54.49 68.97 21.69 87.91 21.69 43.98 54.49 25.02 54.49 20.01 17.35 41.48 17.35 95.42 54.49 73.98 54.49 68.97" style="fill:#5CDB95"/>
+                <polygon points="54.49 78.99 13.01 102.94 13.01 38.98 54.49 15.03 54.49 10.02 8.68 36.47 8.68 110.45 54.49 84 54.49 78.99" style="fill:#5CDB95"/>
+                <polygon points="54.49 89.01 4.34 117.97 4.34 33.97 54.49 5.01 54.49 0 0 31.46 0 125.48 54.49 94.02 54.49 89.01" style="fill:#5CDB95"/>
+            </svg>
+            <img class="fallback" src="" alt="Jesse Creatives Logo">
+        </a>
+        <!-- menu -->
+        <div class="collapse navbar-collapse">
+            <ul class="navbar-nav" >
+                <li class="nav-item"><a href="/" class="nav-link">HOME</a></li>
+                <li class="nav-item"><a href="/works.html" class="nav-link">WORKS</a></li>
+                <li class="nav-item"><a href="/blog.html" class="nav-link">BLOG</a></li>
+                <li class="nav-item"><a href="/about.html" class="nav-link">ABOUT</a></li>
+                <li class="nav-item"><a href="contact.html" class="nav-link">CONTACT</a></li>
+            </ul>
+            <!-- languages -->
+            <ul class="list-inline languages">
+                <li class="list-inline-item"><a class="active" href="#">EN</a></li>
+                <li class="list-inline-item"><a data-lang="jp" href="#">JP</a></li>
+            </ul>
+        </div>
+        </div>
+    </nav>
+    <!-- jumbotron -->
+    <div class="jumbotron text-md-left mb-0 h-100 hero">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <h1 class="value-prop-msg">USER-CENTERED<br>WEB SOLUTIONS</h1>
+                    <p class="sub-value-prop-msg">DESIGN & DEVELOPMENT</p>
+                    <ul class="list-inline cta-group">
+                        <li class="list-inline-item cta"><a href="/works">WORKS</a></li>
+                        <li class="list-inline-item cta cta-line"><a href="/blog">BLOG</a></li>
+                    </ul>
+                    <ul class="list-inline social-media-group">
+                        <li class="list-inline-item social-media twitter">
+                            <a href="#">
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 19.51"><path d="M24,4.57a9.89,9.89,0,0,1-2.82.77,5,5,0,0,0,2.16-2.72,10.1,10.1,0,0,1-3.13,1.19,4.92,4.92,0,0,0-8.51,3.35,5.22,5.22,0,0,0,.13,1.13A14,14,0,0,1,1.64,3.16,4.79,4.79,0,0,0,1,5.64,4.9,4.9,0,0,0,3.16,9.73,5,5,0,0,1,.93,9.12v.06a4.92,4.92,0,0,0,4,4.82,4.73,4.73,0,0,1-2.21.09,4.94,4.94,0,0,0,4.6,3.42,9.86,9.86,0,0,1-6.1,2.1A9.18,9.18,0,0,1,0,19.54a14,14,0,0,0,7.56,2.21,13.9,13.9,0,0,0,14-14c0-.21,0-.42,0-.63A9.94,9.94,0,0,0,24,4.59Z" transform="translate(0 -2.25)"/></svg>
+                            </a>
+                        </li>
+                        <li class="list-inline-item social-media linkedin">
+                            <a href="#">
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M20.45,20.45H16.89V14.88c0-1.32,0-3-1.85-3s-2.13,1.44-2.13,2.94v5.66H9.35V9h3.41v1.56h.05a3.75,3.75,0,0,1,3.37-1.85c3.6,0,4.27,2.37,4.27,5.46v6.28ZM5.34,7.43A2.06,2.06,0,1,1,7.4,5.37,2.06,2.06,0,0,1,5.34,7.43Zm1.78,13H3.56V9H7.12ZM22.23,0H1.77A1.75,1.75,0,0,0,0,1.73V22.27A1.75,1.75,0,0,0,1.77,24H22.22A1.75,1.75,0,0,0,24,22.27V1.73A1.75,1.75,0,0,0,22.22,0Z" transform="translate(0 0)"/></svg>
+                            </a>
+                        </li>
+                        <li class="list-inline-item social-media dribble">
+                            <a href="#">
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12,24A12,12,0,1,1,24,12,12,12,0,0,1,12,24ZM22.12,13.64a15.09,15.09,0,0,0-6.38-.44,45.06,45.06,0,0,1,2,7.31,10.27,10.27,0,0,0,4.39-6.87ZM16,21.45a42.42,42.42,0,0,0-2.19-7.77l-.06,0c-5.79,2-7.86,6-8,6.4A10.19,10.19,0,0,0,16,21.45ZM4.38,18.87a16.32,16.32,0,0,1,8.34-6.76,3,3,0,0,1,.4-.12c-.26-.59-.54-1.17-.83-1.74A37.66,37.66,0,0,1,1.76,11.7V12a10.21,10.21,0,0,0,2.64,6.86ZM2,9.92a38.76,38.76,0,0,0,9.48-1.25,65.8,65.8,0,0,0-3.8-5.93A10.25,10.25,0,0,0,2,9.91ZM9.6,2.05a54.65,54.65,0,0,1,3.82,6,11.6,11.6,0,0,0,5.38-3.7A10.2,10.2,0,0,0,12,1.76a10,10,0,0,0-2.4.29ZM19.94,5.54a13.79,13.79,0,0,1-5.73,4c.24.49.47,1,.68,1.48.08.18.15.36.22.53a24,24,0,0,1,7.14.33,10.14,10.14,0,0,0-2.31-6.38Z" transform="translate(0 0)"/></svg>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-md-6">
+                    <img src="{{ page.header.img.source }}" alt="{{ page.header.img.alt }}">
+                </div>
+            </div>
+        </div>
+    </div>
 </header>
 <main>
     {% for section in page.sections %}
