--- a/_sass/base/_parameters.scss
+++ b/_sass/base/_parameters.scss
@@ -18,10 +18,11 @@ $font-size-xxxs: 1.2rem;
 $font-size-xxxxs: 1rem;
 
 // font weights
-$font-weight-light: 500;
-$font-weight-medium: 600;
-$font-weight-bold: 700;
-$font-weight-bolder: bold;
+$font-weight-light: 300;
+$font-weight-regular: 400;
+$font-weight-medium: 500;
+$font-weight-bold: 600;
+$font-weight-bolder: 700;
 
 // letter spacing
 $letter-spacing-1: 1rem;
