--- a/_sass/base/_base.scss
+++ b/_sass/base/_base.scss
@@ -26,8 +26,11 @@ a:hover {
 }
 h1 {
     font-size: $font-size-lg;
-    font-weight: $font-weight-medium;
+    font-weight: $font-weight-bold;
 }
 .container {
     padding: 0;
+}
+.font-weight-medium {
+    font-weight: $font-weight-regular;
 }
