Fix font weight for hero and add social media icons; still need to change icons color

--- a/_includes/section.html
+++ b/_includes/section.html
@@ -1,4 +1,4 @@
-<section id="{{ section.id }}">
+<section id="{{ section.id }}" class="container">
     {% if section.title %}
         <h2>{{ section.title }}</h2>
     {% endif %}
