--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -51,21 +51,13 @@ layout: base
                         {% endfor %}
                     </ul>
                     <ul class="list-inline social-media-group">
-                        <li class="list-inline-item social-media twitter">
-                            <a href="#">
-                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 19.51"><path d="M24,4.57a9.89,9.89,0,0,1-2.82.77,5,5,0,0,0,2.16-2.72,10.1,10.1,0,0,1-3.13,1.19,4.92,4.92,0,0,0-8.51,3.35,5.22,5.22,0,0,0,.13,1.13A14,14,0,0,1,1.64,3.16,4.79,4.79,0,0,0,1,5.64,4.9,4.9,0,0,0,3.16,9.73,5,5,0,0,1,.93,9.12v.06a4.92,4.92,0,0,0,4,4.82,4.73,4.73,0,0,1-2.21.09,4.94,4.94,0,0,0,4.6,3.42,9.86,9.86,0,0,1-6.1,2.1A9.18,9.18,0,0,1,0,19.54a14,14,0,0,0,7.56,2.21,13.9,13.9,0,0,0,14-14c0-.21,0-.42,0-.63A9.94,9.94,0,0,0,24,4.59Z" transform="translate(0 -2.25)"/></svg>
-                            </a>
-                        </li>
-                        <li class="list-inline-item social-media linkedin">
-                            <a href="#">
-                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M20.45,20.45H16.89V14.88c0-1.32,0-3-1.85-3s-2.13,1.44-2.13,2.94v5.66H9.35V9h3.41v1.56h.05a3.75,3.75,0,0,1,3.37-1.85c3.6,0,4.27,2.37,4.27,5.46v6.28ZM5.34,7.43A2.06,2.06,0,1,1,7.4,5.37,2.06,2.06,0,0,1,5.34,7.43Zm1.78,13H3.56V9H7.12ZM22.23,0H1.77A1.75,1.75,0,0,0,0,1.73V22.27A1.75,1.75,0,0,0,1.77,24H22.22A1.75,1.75,0,0,0,24,22.27V1.73A1.75,1.75,0,0,0,22.22,0Z" transform="translate(0 0)"/></svg>
-                            </a>
-                        </li>
-                        <li class="list-inline-item social-media dribble">
-                            <a href="#">
-                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12,24A12,12,0,1,1,24,12,12,12,0,0,1,12,24ZM22.12,13.64a15.09,15.09,0,0,0-6.38-.44,45.06,45.06,0,0,1,2,7.31,10.27,10.27,0,0,0,4.39-6.87ZM16,21.45a42.42,42.42,0,0,0-2.19-7.77l-.06,0c-5.79,2-7.86,6-8,6.4A10.19,10.19,0,0,0,16,21.45ZM4.38,18.87a16.32,16.32,0,0,1,8.34-6.76,3,3,0,0,1,.4-.12c-.26-.59-.54-1.17-.83-1.74A37.66,37.66,0,0,1,1.76,11.7V12a10.21,10.21,0,0,0,2.64,6.86ZM2,9.92a38.76,38.76,0,0,0,9.48-1.25,65.8,65.8,0,0,0-3.8-5.93A10.25,10.25,0,0,0,2,9.91ZM9.6,2.05a54.65,54.65,0,0,1,3.82,6,11.6,11.6,0,0,0,5.38-3.7A10.2,10.2,0,0,0,12,1.76a10,10,0,0,0-2.4.29ZM19.94,5.54a13.79,13.79,0,0,1-5.73,4c.24.49.47,1,.68,1.48.08.18.15.36.22.53a24,24,0,0,1,7.14.33,10.14,10.14,0,0,0-2.31-6.38Z" transform="translate(0 0)"/></svg>
-                            </a>
-                        </li>
+                        {% for icon in page.header.social-media %}
+                            <li class="list-inline-item social-media">
+                                <a href="#">
+                                    <img src="{{ icon.path }}" alt="{{ icon.id }} icon">
+                                </a>
+                            </li>
+                        {% endfor %}
                     </ul>
                 </div>
                 <div class="col-md-6">
@@ -77,6 +69,6 @@ layout: base
 </header>
 <main>
     {% for section in page.sections %}
-        {% include {{ section.type }} section=section site=site page=page %}
+        {% include {{ section.type }} %}
     {% endfor %}
 </main>
