--- a/_sass/base/_base.scss
+++ b/_sass/base/_base.scss
@@ -28,9 +28,12 @@ h1 {
     font-size: $font-size-lg;
     font-weight: $font-weight-bold;
 }
+section {
+
+}
 .container {
     padding: 0;
 }
-.font-weight-medium {
+.font-weight-regular {
     font-weight: $font-weight-regular;
 }
