--- a/_sass/components/_button.scss
+++ b/_sass/components/_button.scss
@@ -7,15 +7,15 @@
     top: 50%;
     transform: translateY(-50%);
     fill: $color-light;
-    width: 2rem;
+    width: 2.5rem;
 }
 @mixin line-button($text-color, $line-color) {
     position: relative;
     height: 100%;
     padding: $padding-1-half 0;
     color: $text-color;
-    font-size: $font-size-xxs;
-    font-weight: $font-weight-light;
+    font-size: $font-size-xs;
+    font-weight: $font-weight-medium;
     background-color: transparent;
     border: $border;
     border-radius: 6rem;
@@ -26,5 +26,14 @@
 }
 .btn-title {
     position: relative;
-    top: 0.1rem;
+    top: 0.2rem;
+}
+.social-media {
+    width: 3rem;
+    transform: translateY(2rem);
+    margin-right: 3rem!important;
+    img {
+        width: 100%;
+        fill: $color-primary;
+    }
 }
