Add works.md, about.md, orresponding html files and sass files

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,74 +1,12 @@
 ---
 layout: base
 ---
-<header>
-    <!-- nav  -->
-    <nav class="navbar navbar-expand-sm">
-        <div class="container container-row">
-            <!-- nav toggle button -->
-        <button class="navbar-toggler">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <!-- logo -->
-        <a class="logo" href="jessecreatives.com">
-            <!-- svg logo -->
-            <svg id="レイヤー_1" data-name="レイヤー 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 84.5 129.16"><polygon points="57.75 129.16 14.37 129.16 62.81 101.19 62.81 54.89 30 73.83 30 48.78 84.5 17.32 84.5 113.72 57.75 129.16" style="fill:#1f2833"/><polygon points="54.49 68.97 21.69 87.91 21.69 43.98 54.49 25.02 54.49 20.01 17.35 41.48 17.35 95.42 54.49 73.98 54.49 68.97" style="fill:#1f2833"/><polygon points="54.49 78.99 13.01 102.94 13.01 38.98 54.49 15.03 54.49 10.02 8.68 36.47 8.68 110.45 54.49 84 54.49 78.99" style="fill:#1f2833"/><polygon points="54.49 89.01 4.34 117.97 4.34 33.97 54.49 5.01 54.49 0 0 31.46 0 125.48 54.49 94.02 54.49 89.01" style="fill:#1f2833"/></svg>
-            <h1><span class="font-weight-regular">JESSE</span>CREATIVES</h1>
-        </a>
-        <!-- menu -->
-        <div class="collapse navbar-collapse">
-            <ul class="navbar-nav" >
-                {% for item in site.data.menu.nav %}
-                    <li class="nav-item"><a href="{{ item.url | relative_url }}" class="nav-link {% if item.title == 'HOME' %}active{% endif %}">{{ item.title }}</a></li>
-                {% endfor %}
-            </ul>
-            <!-- languages -->
-            <ul class="list-inline languages">
-                <li class="list-inline-item"><a data-lang="en" class="active" href="#">EN</a></li>
-                <li class="list-inline-item"><a data-lang="jp" href="#">JP</a></li>
-            </ul>
-        </div>
-        </div>
-    </nav>
-    <!-- jumbotron -->
-    <div class="jumbotron text-md-left mb-0 h-100 hero">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6">
-                    <h1 class="value-prop-msg">{{ page.header.title }}</h1>
-                    <p class="sub-value-prop-msg">{{ page.header.description }}</p>
-                    <ul class="list-inline cta-group">
-                        {% for action in page.header.actions %}
-                            <li class="list-inline-item cta {% if action.style %}{{ action.style }}{% endif %}">
-                                <a href="{{ action.url }}">
-                                    <span class="btn-title">{{ action.title }}</span>
-                                    <svg viewBox="0 0 16 16" class="bi bi-arrow-right-short" xmlns="http://www.w3.org/2000/svg">
-                                        <path fill-rule="evenodd" d="M8.146 4.646a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708-.708L10.793 8 8.146 5.354a.5.5 0 0 1 0-.708z"/>
-                                        <path fill-rule="evenodd" d="M4 8a.5.5 0 0 1 .5-.5H11a.5.5 0 0 1 0 1H4.5A.5.5 0 0 1 4 8z"/>
-                                    </svg>
-                                </a>
-                            </li>
-                        {% endfor %}
-                    </ul>
-                    <ul class="list-inline social-media-group">
-                        {% for icon in page.header.social-media %}
-                            <li class="list-inline-item social-media">
-                                <a href="#">
-                                    <img src="{{ icon.path }}" alt="{{ icon.id }} icon">
-                                </a>
-                            </li>
-                        {% endfor %}
-                    </ul>
-                </div>
-                <div class="col-md-6">
-                    <img class="hero-img" src="{{ page.header.img.source }}" alt="{{ page.header.img.alt }}">
-                </div>
-            </div>
-        </div>
-    </div>
-</header>
+
+{% include nav.html page=page %}
 <main>
     {% for section in page.sections %}
         {% include {{ section.type }} %}
     {% endfor %}
 </main>
+
+{{ content }}
