--- a/_sass/pages/_home.scss
+++ b/_sass/pages/_home.scss
@@ -1,67 +1,4 @@
-@import "../base/parameters";
-@import "../base/base";
-@import "../utils/animation";
-@import "../components/button";
-@import "../components/nav";
-@import "../components/jumbo";
-
-
-.hero-img {
-    width: 100%;
-}
-.container {
-    padding: $padding-12 0;
-}
-.value-prop-msg {
-    span {
-        font-size: $font-size-sm;
-    }
-}
-.sub-value-prop-msg {
-    font-size: $font-size-xs;
-    font-weight: $font-weight-bold;
-    letter-spacing: 0.6rem;
-    transform: translate(0.2rem, -3rem);
-}
-.col-md-6:first-child {
-    transform: translateY(6rem);
-}
-// call-to-action buttons
-.cta-group {
-    transform: translateY(-1rem);
-}
-.cta {
-    width: 15rem;
-    a {
-        line-height: 2rem;
-        @include fill-button($color-light, $color-primary);
-        .bi-arrow-right-short {
-            right: 10%;
-        }
-        &:hover {
-            background-color: transparent;
-            color: $color-primary;
-            .bi-arrow-right-short {
-                fill: $color-primary;
-                animation: wiggle 1s linear infinite normal;
-            }
-        }
-    }
-    margin-right: $margin-3!important;
-}
-.cta-line {
-    a {
-        @include line-button($color-primary, $color-primary);
-        .bi-arrow-right-short {
-            fill: $color-primary;
-        }
-        &:hover {
-            background-color: $color-primary;
-            color: $color-light;
-            .bi-arrow-right-short {
-                fill: $color-light;
-            }
-        }
-    }
-    
-}
+@import "../layouts/nav";
+@import "../layouts/hero";
+@import "../layouts/section";
+@import "../layouts/footer";
