Add blog/index.html, pagination and modify scss; test blog and it works

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,4 +1,4 @@
-<section class="section page">
+<section class="section page about">
     <h1 class="title">{{ page.title | upcase }}</h1>
     <p class="desc">{{ page.description }}</p>
     {% for section in page.sections %}
