--- a/_includes/works.html
+++ b/_includes/works.html
@@ -1,4 +1,4 @@
-<section class="container section page">
+<section class="container section page works">
     <h1 class="title">{{ page.title | upcase }}</h1>
     <p class="desc">{{ page.description }}</p>
     <div class="row">
