--- a/_sass/base/_base.scss
+++ b/_sass/base/_base.scss
@@ -53,11 +53,17 @@ p {
     margin: 0 auto;
     padding: 0;
 }
+.row {
+    width: 100%;
+}
 .col-md-6,
 .col-md-3,
 .col-lg-4 {
     padding: 0 2rem;
     margin-bottom: 4rem;
+    a {
+        height: 100%;
+    }
 }
 .bg-yellow {
     background-color: $color-secondary;
