--- a/_sass/pages/_about.scss
+++ b/_sass/pages/_about.scss
@@ -2,23 +2,25 @@
 @import "../layouts/page";
 @import "../layouts/footer";
 
-.row-container {
-    width: 100%;
-    padding: 8rem 0;
-}
-.desc {
-    margin: 0;
-}
-.col-md-6 {
-    padding: 0 3rem;
-    margin: 0;
-    &.img-container {
+.about {
+    .row-container {
         width: 100%;
-        height: 24rem;
-        overflow: hidden;
-        .about-img {
+        padding: 8rem 0;
+    }
+    .desc {
+        margin: 0;
+    }
+    .col-md-6 {
+        padding: 0 3rem;
+        margin: 0;
+        &.img-container {
             width: 100%;
-            object-fit: cover;
+            height: 24rem;
+            overflow: hidden;
+            .about-img {
+                width: 100%;
+                object-fit: cover;
+            }
         }
     }
 }
