--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -5,7 +5,7 @@
         <span class="navbar-toggler-icon"></span>
     </button>
     <!-- logo -->
-    <a class="d-flex flex-row logo" href="jessecreatives.com">
+    <a class="d-flex flex-row logo" href="{{ site.url }}">
         <!-- svg logo -->
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 84.5 129.16">
             <polygon points="57.75 129.16 14.37 129.16 62.81 101.19 62.81 54.89 30 73.83 30 48.78 84.5 17.32 84.5 113.72 57.75 129.16"/>
