--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -6,7 +6,7 @@ $color-dark: #333333;
 
 // font families
 $font-family-primary: 'Teko', sans-serif;
-$font-family-secondary: 'Titillium Web', sans-serif;
+$font-family-secondary: 'Roboto', sans-serif;
 
 // font sizes
 $font-size-xg: 5rem;
