--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -1,6 +1,7 @@
 // colors
 $color-primary: #1F2833;
 $color-secondary: #FEB300;
+$color-accent: #4ABDAC;
 $color-light: #FFF5D7;
 $color-dark: #333333;
 
