--- a/_sass/layouts/_hero.scss
+++ b/_sass/layouts/_hero.scss
@@ -13,7 +13,8 @@
     }
     .sub-value-prop-msg {
         margin-bottom: 3rem;
-        font-size: $font-size-md-sm;
+        font-family: $font-family-primary;
+        font-size: $font-size-sm;
         font-weight: $font-weight-normal;
         letter-spacing: $letter-spacing-lg;
     }
