--- a/_sass/pages/_about.scss
+++ b/_sass/pages/_about.scss
@@ -22,5 +22,12 @@
                 object-fit: cover;
             }
         }
+        .tag {
+            display: block;
+            margin-bottom: 1rem;
+        }
+        h2 {
+            margin-bottom: 2rem;
+        }
     }
 }
