Adjust home page for new design

--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -9,10 +9,9 @@
                         <li class="list-inline-item btn">
                             <a href="{{ action.url }}" class="cta {% if action.style %}{{ action.style }}{% endif %}">
                                 <span class="btn-title">{{ action.title }}</span>
-                                <svg viewBox="0 0 16 16" class="bi bi-arrow-right-short" xmlns="http://www.w3.org/2000/svg">
-                                    <path fill-rule="evenodd" d="M8.146 4.646a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708-.708L10.793 8 8.146 5.354a.5.5 0 0 1 0-.708z"/>
-                                    <path fill-rule="evenodd" d="M4 8a.5.5 0 0 1 .5-.5H11a.5.5 0 0 1 0 1H4.5A.5.5 0 0 1 4 8z"/>
-                                </svg>
+                                <svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60.916 18.02">
+                                    <path d="M5740.861,3052.761h49.879l-21.18-12.432" transform="translate(-5740.861 -3037.742)" fill="none"/>
+                                </svg> 
                             </a>
                         </li>
                     {% endfor %}
