--- a/_includes/work-with.html
+++ b/_includes/work-with.html
@@ -2,7 +2,7 @@
     <h2 class="title no-desc">WORK WITH</h2>
     <div class="row">
         {% for client in section.clients %}
-        <div class="col-md-6 col-lg-3">
+        <div class="col-md-4">
             <div class="card no-border no-cursor">
                 <div class="img-container"><img src="{{ client.img.path }}" alt="{{ client.img.alt}}" class="card-img-top"></div>
                 <div class="card-body">
