--- a/_sass/utilities/_mixins.scss
+++ b/_sass/utilities/_mixins.scss
@@ -10,23 +10,23 @@
     background-color: $bg-color;
     color: $text-color;
     border: 0.2rem solid $bg-color;
-    border-radius: 100rem;
     span {
         display: block;
         transform: translateY(0.1rem);
     }
-    .bi-arrow-right-short {
-        width: 2rem;
-        fill: $text-color;
+    .arrow {
+        width: 1.5rem;
+        stroke: $text-color;
+        stroke-width: 6;
         position: absolute;
-        right: 12%;
-        top: 25%;
+        right: 10%;
+        top: 40%;
     }
     &:hover {
         background-color: transparent;
         color: $bg-color;
-        .bi-arrow-right-short {
-            fill: $bg-color;
+        .arrow {
+            stroke: $bg-color;
             animation: wiggle 1s linear infinite;
         }
     }
@@ -37,18 +37,18 @@
     &:hover {
         background-color: $line-color;
         color: $text-color;
-        .bi-arrow-right-short {
-            fill: $text-color;
+        .arrow {
+            stroke: $text-color;
         }
     }
 }
 
 @mixin navbar($bg-color, $text-color, $text-highlight-color) {
     width: 100%;
-    height: 8rem;
+    height: 6rem;
     background-color: $bg-color;
     .logo {
-        width: 45%;
+        width: 50%;
         color: $text-color;
         svg {
             width: 5%;
@@ -62,18 +62,18 @@
         }
     }
     .navbar-collapse {
-        width: 55%;
-        height: 8rem;
-        font-size: $font-size-sm;
+        width: 50%;
+        height: 6rem;
+        font-size: $font-size-sm-xs;
         font-weight: $font-weight-normal;
-        letter-spacing: $letter-spacing-md;
+        letter-spacing: $letter-spacing-lg;
         .navbar-nav {
             width: 80%;
             justify-content: center;
             margin-right: 2rem;
             .nav-item {
                 width: 20%;
-                height: 8rem;
+                height: 6rem;
             }
             .nav-link {
                 padding: 0;
@@ -110,7 +110,7 @@
                 border-radius: 50%;
                 position: absolute;
                 left: 50%;
-                transform: translate(-52%, -0.75rem);
+                transform: translate(-52%, -1rem);
             }
         }
         &:hover {
