--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -26,6 +26,7 @@ $font-weight-bold: 600;
 $font-weight-bolder: 700;
 
 // letter spacing
+$letter-spacing-xg: 0.5rem;
 $letter-spacing-lg: 0.3rem;
 $letter-spacing-md: 0.2rem;
 $letter-spacing-sm: 0.1rem;
