--- a/_sass/components/_card.scss
+++ b/_sass/components/_card.scss
@@ -2,10 +2,21 @@
 
 
 .card {
-    height: 100%;
-    padding: 3rem;
-    border-radius: 0.5rem;
-    cursor: pointer;
+    position: relative;
+    min-height: 25rem;
+    padding: 3rem 0;
+    border-radius: 0;
+    &.bg::before {
+        content: "";
+        display: block;
+        width: 100%;
+        height: 100%;
+        background-color: black;
+        opacity: 0.5;
+        position: absolute;
+        top: 0;
+        left: 0;
+    }
     &:hover {
         box-shadow: 0.2rem 0.2rem 0.5rem 0 lighten($color-dark, 70%);
         transform: translateY(-0.5rem);
@@ -20,28 +31,30 @@
         border: none;
         padding: 0;
     }
-    &.no-cursor {
-        cursor: initial;
-        &:hover {
-            position: static;
-            transform: none;
-            box-shadow: none;
-        }
-    }
-    .img-container {
+    .card-img-top {
         width: 100%;
-        height: 16rem;
-        img {
-            height: 100%;
-            object-fit: cover;
-        }
     }
-    .card-body {
-        padding: 3rem 0 0;
-        text-align: center;
-        .card-title {
-            font-size: $font-size-sm;
-            margin-bottom: 1rem;
-        }
+    .card-title, .card-text {
+        position: absolute;
+        color: #f2f2f2;
+    }
+    .card-title {
+        font-size: $font-size-sm-xs;
+        top: 6%;
+        left: 12%;
+        text-align: left;
+    }
+    .card-subtitle {
+        display: block;
+        font-weight: $font-weight-light;
+        margin-top: 0.5rem;
+    }
+    .card-text {
+        font-size: $font-size-xs;
+        font-weight: $font-weight-light;
+        letter-spacing: $letter-spacing-xg;
+        transform: rotate(-90deg);
+        bottom: 25%;
+        left: -22%;
     }
 }
