--- a/_sass/base/_base.scss
+++ b/_sass/base/_base.scss
@@ -8,10 +8,8 @@
 }
 html {
     font-size: 62.5%;
-    height: 100%;
 }
 body {
-    height: 100%;
     font-size: $font-size-sm;
     font-family: $font-family-primary;
     font-weight: $font-weight-light;
@@ -57,6 +55,7 @@ p {
 }
 .container {
     width: 80%;
+    max-width: 120rem;
     margin: 0 auto;
     padding: 0;
 }
@@ -71,5 +70,8 @@ p {
     }
 }
 .bg-yellow {
+    background-color: $color-secondary;
+}
+.body-bg {
     background-color: $color-secondary;
 }
