--- a/_sass/layouts/_section.scss
+++ b/_sass/layouts/_section.scss
@@ -10,6 +10,15 @@
     align-items: center;
     padding: 12rem 0;
 }
+.work {
+    align-items: flex-start;
+    background-color: $color-light;
+    position: relative;
+    top: 12rem;
+    img {
+        max-width: 100%;
+    }
+}
 .title {
     position: relative;
     z-index: 1;
