--- a/_sass/utilities/_mixins.scss
+++ b/_sass/utilities/_mixins.scss
@@ -43,10 +43,8 @@
     }
 }
 
-@mixin navbar($bg-color, $text-color, $text-highlight-color) {
+@mixin navbar($text-color, $text-highlight-color) {
     width: 100%;
-    height: 6rem;
-    background-color: $bg-color;
     .logo {
         width: 50%;
         color: $text-color;
