--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,11 +1,11 @@
-<nav class="navbar navbar-expand-sm fixed-top {% if page.inverse %}inverse{% endif %}">
+<nav class="navbar navbar-expand-sm">
     <div class="container d-flex flex-row">
         <!-- nav toggle button -->
     <button class="navbar-toggler">
         <span class="navbar-toggler-icon"></span>
     </button>
     <!-- logo -->
-    <a class="d-flex flex-row logo" href="{{ site.url }}">
+    <a class="d-flex flex-row navbar-brand" href="{{ site.url }}">
         <!-- svg logo -->
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 84.5 129.16">
             <polygon points="57.75 129.16 14.37 129.16 62.81 101.19 62.81 54.89 30 73.83 30 48.78 84.5 17.32 84.5 113.72 57.75 129.16"/>
