--- a/_includes/work.html
+++ b/_includes/work.html
@@ -1,3 +1,4 @@
-<section class="container section page work">
-    <p>{{ content }}</p>
+<section class="container section work">
+    <h1>{{ page.title }}</h1>
+    <div class="work-content">{{ content }}</div>
 </section>
