--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -7,7 +7,7 @@ $color-dark: #333333;
 
 // font families
 $font-family-primary: 'Teko', sans-serif;
-$font-family-secondary: 'Roboto', sans-serif;
+$font-family-secondary: 'Oxygen', sans-serif;
 
 // font sizes
 $font-size-xg: 5rem;
