--- a/_sass/layouts/_section.scss
+++ b/_sass/layouts/_section.scss
@@ -8,15 +8,50 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 12rem 0;
+    padding: 10rem 0;
 }
 .work {
-    align-items: flex-start;
-    background-color: $color-light;
+    background-color: white;
     position: relative;
-    top: 12rem;
+    top: 10rem;
+    margin-bottom: 16rem;
     img {
         max-width: 100%;
+        margin-top: 6rem;
+    }
+    h1 {
+        margin-bottom: 12rem;
+    }
+    .work-content {
+        width: 70%;
+        margin: 0 auto;
+        h2 {
+            margin-bottom: 2rem;
+        }
+        p {
+            font-family: $font-family-secondary;
+            font-size: $font-size-sm;
+            font-weight: $font-weight-normal;
+            opacity: .9;
+            line-height: 4rem;
+        }
+        .tag {
+            display: inline-block;
+            margin-bottom: 1rem;
+            font-size: $font-size-sm-xs;
+            font-weight: $font-weight-bold;
+            &::after {
+                content: "";
+                display: block;
+                width: 100%;
+                height: 0.2rem;
+                background-color: $color-dark;
+            }
+        }
+        .paragraph {
+            display: block;
+            margin-bottom: 12rem;
+        }
     }
 }
 .title {
