--- a/_sass/utilities/_mixins.scss
+++ b/_sass/utilities/_mixins.scss
@@ -45,8 +45,13 @@
 
 @mixin navbar($text-color, $text-highlight-color) {
     width: 100%;
-    .logo {
+    padding: 0;
+    position: absolute;
+    left: 0;
+    top: 0;
+    .navbar-brand {
         width: 50%;
+        padding: 0;
         color: $text-color;
         svg {
             width: 5%;
@@ -55,23 +60,24 @@
         }
         h1 {
             font-size: $font-size-md-sm;
-            line-height: 8rem;
+            line-height: 6rem;
             transform: translateY(0.2rem);
         }
     }
     .navbar-collapse {
         width: 50%;
-        height: 6rem;
+        height: 10rem;
         font-size: $font-size-sm-xs;
         font-weight: $font-weight-normal;
         letter-spacing: $letter-spacing-lg;
         .navbar-nav {
             width: 80%;
+            height: 100%;
             justify-content: center;
             margin-right: 2rem;
             .nav-item {
                 width: 20%;
-                height: 6rem;
+                height: 100%;
             }
             .nav-link {
                 padding: 0;
